--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MEAN-stack-authentication",
+  "name": "mean-stack-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -27,5 +27,22 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4"
-  }
+  },
+  "description": "mean stack app",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arun459/mean-stack-app.git"
+  },
+  "keywords": [
+    "mean",
+    "stack",
+    "app"
+  ],
+  "author": "arun",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/arun459/mean-stack-app/issues"
+  },
+  "homepage": "https://github.com/arun459/mean-stack-app#readme"
 }
